Roster Trunk - Roster background has been changed to 1 large image fixed - Vault -- got alot of love for style it was broken logs where not showing now they do - DB changes for upgrade added - Upgrade errors fixed for 2.2 launch

--- a/trunk/templates/default/vault/style.css
+++ b/trunk/templates/default/vault/style.css
@@ -12,11 +12,19 @@
  */
 
 .vault-grid { margin: auto; width: 672px; }
+.vault-log { margin: auto; width: 672px; }
 .vault-column { width:48px; float:left; }
 .title-money { color: #000; font: bold 12px/18px Verdana, Geneva, sans-serif; z-index: 500; float: right; margin-top: 0px; margin-bottom: 0; margin-left: 0px; }
 .title-money img { width:11px; height:10px; }
-.tab-navigation { position:relative; float:right; }
-
+.tab-navigation .Tab1 { position:relative; float:right; }
+.tab-navigation .Tab2{ position:relative; float:right; }
+.tab-navigation .Tab3{ position:relative; float:right; }
+.tab-navigation .Tab4{ position:relative; float:right; }
+.tab-navigation .Tab5{ position:relative; float:right; }
+.tab-navigation .Tab6{ position:relative; float:right; }
+.tab-navigation .Tab7{ position:relative; float:right; }
+.tab-navigation .Tab8{ position:relative; float:right; }
+.tab-navigation .MoneyLog{ position:relative; float:right; }
 .deposit { font-weight:bold;color:#7eff00; }
 .withdraw { font-weight:bold;color:#ff0000; }
 .move { font-weight:bold;color:#8000ff; }
